--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,16 @@ services:
             MONGO_INITDB_ROOT_USERNAME: root        # CHANGE THIS !
             MONGO_INITDB_ROOT_PASSWORD: password    # CHANGE THIS !
 
+    mongo-express:
+        container_name: auth_bdd_dash
+        image: mongo-express
+        restart: always
+        ports:
+            - "8080:8081"
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: root
+            ME_CONFIG_MONGODB_ADMINPASSWORD: password
+
     polaris:
         container_name: polaris
         build: .
